changes to the code added new code fixing code issues and other changes