@@ -24,9 +24,11 @@ subprojects {
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
         options.release.set(21)
+        options.compilerArgs << "--enable-preview" << "-Xlint:unchecked" << "-Xlint:preview"
     }
 
     test {
         useJUnitPlatform()
+        jvmArgs += "--enable-preview"
     }
 }
